--- a/views/login.mustache
+++ b/views/login.mustache
@@ -14,9 +14,9 @@
       <label for="">Password</label>
       <input type="text" name="password" placeholder="Enter password..." value="">
       <button type="submit" name="button">Login</button>
-      {{#errors}}
-        {{errors}}
-      {{/errors}}
+      {{#error}}
+        {{error}}
+      {{/error}}
     </form>
   </body>
 </html>
